--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "pack/n1t0r/start/vim-repeat"]
 	path = pack/n1t0r/start/vim-repeat
 	url = https://github.com/tpope/vim-repeat.git
+[submodule "pack/n1t0r/start/vim-go"]
+	path = pack/n1t0r/start/vim-go
+	url = https://github.com/fatih/vim-go.git
