--- a/coc-settings.json
+++ b/coc-settings.json
@@ -7,11 +7,17 @@
         "java",
         "c",
         "sql",
-        "python"
+        "python",
+        "rust"
     ],
     "sql.lintOnOpen": false,
     "sql.lintOnChange": false,
     "sql.lintOnSave": false,
+    "rust-analyzer.inlayHints.chainingHints.enable": true,
+    "rust-analyzer.inlayHints.closingBraceHints.enable": false,
+    "rust-analyzer.inlayHints.parameterHints.enable": false,
+    "rust-analyzer.inlayHints.renderColons": false,
+    "rust-analyzer.inlayHints.typeHints.enable": false,
     "languageserver": {
         "go": {
             "command": "gopls",
